# arrayview

./: .gitignore  404.html  AGENTS.md  CHUNK_PLAN.md  CONTRIBUTING.md  DESIGN.md  IMMERSIVE_ANIMATION.md  INSTRUCTIONS.md  LICENSE  LOG_LARGE_ARRAYS.md  NEXT_STEPS.txt  README.md  TODO.md  TUNNEL_PLAN.md  VSCODE_DETECTION.md  dev_run.sh  diagnostics.py  diagnosticss.py  index.html  kill_arrayview.sh  log.txt  mkdocs.yml  npshow.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: copilot-instructions.md  docs.yml  launch-contracts.yml
.mex/: AGENTS.md  ROUTER.md  SETUP.md  SYNC.md  setup.sh  sync.sh
.playwright-cli/: page-2026-05-06T18-46-49-737Z.yml  page-2026-05-06T19-39-12-257Z.yml  page-2026-05-06T20-25-13-179Z.yml  page-2026-05-06T21-01-41-283Z.yml  page-2026-05-06T21-03-00-625Z.yml  page-2026-05-06T21-33-39-044Z.yml  page-2026-05-06T22-37-23-895Z.yml  page-2026-05-07T01-41-46-243Z.yml  page-2026-05-07T12-14-47-582Z.yml  page-2026-05-07T12-17-10-247Z.yml  page-2026-05-07T12-18-24-707Z.yml  page-2026-05-07T12-20-06-164Z.yml  page-2026-05-07T12-20-28-342Z.yml  page-2026-05-07T12-23-11-336Z.yml  page-2026-05-07T12-24-09-267Z.yml  page-2026-05-07T12-24-35-434Z.yml  page-2026-05-07T12-46-46-468Z.yml  page-2026-05-07T12-49-26-400Z.yml  theme-dark.yml
arrayshow/: __init__.py  cli.py  core.py  events.py  setup.py  state.py  ui.py
comparing/: index.html
configuration/: index.html
dev/: TODO.md  immersive-crossfade-handoff.md  launch-execution-ledger.md  launch-tunnel-test-handoff.md  lessons_learned.md  mode_matrix.md
display/: index.html
docs/: TODO.md  comparing.md  competitor-features.md  configuration.md  display.md  foreign-hosts.md  index.md  large-arrays.md  launch-routing-refactor.md  lifecycle.md  loading.md  measurement.md  remote.md  stack-overlays.md  viewing.md  vscode-window-routing-plan.md
foreign-hosts/: index.html
launch-routing-refactor/: index.html
lifecycle/: index.html
loading/: index.html
matlab/: arrayview.m
measurement/: index.html
plans/: 2026-04-14-immersive-animation.md  2026-05-07-unified-colormap-picker.md  2026-07-21-launch-execution-convergence.md  arrayview_tool_menu_fix_prompt.md  arrayview_tool_menu_implementation_plan.md  egg-placement-mockup.html  refactoring_plan.md  roi-analysis-requirements.md
remote/: index.html
scripts/: demo.py  release.sh
search/: search_index.json
src/: __init__.py  arrayview.py  cli.py  test_new_features.py
stack-overlays/: index.html
stylesheets/: extra.css
tests/: capture_patient_loading.py  capture_v_animation.py  conftest.py  lifecycle_matrix.py  make_vectorfield_test_arrays.py  test_api.py  test_backend_shared.py  test_browser.py  test_cli.py  test_codex_open.py  test_colorbar_hover_highlight.py  test_command_reachability.py  test_config.py  test_cross_mode_parametrized.py  test_dicom.py  test_display_opener_results.py  test_doctor_commands.py  test_drop_import.py  test_instance_registry.py  test_interactions.py  test_invocation_contract_matrix.py  test_io.py  test_large_arrays.py  test_launch_blackbox.py  test_launch_diagnostics.py  test_launch_execution_ownership.py  test_launch_plan.py  test_launch_trace.py  test_lifecycle_contract.py  test_loading_server.py  test_mode_consistency.py  test_mode_entry_batching.py  test_mode_matrix.py  test_mode_roundtrip.py  test_nifti_meta.py  test_nifti_series.py  test_public_invocation_regressions.py  test_rgb_pixel_art.py  test_safe_server_stop.py  test_server_identity_status.py  (+11 more)
viewing/: index.html
vscode-extension/: AGENTS.md  LICENSE  arrayview-opener-0.0.1.vsix  extension.js  lifecycle_helpers.js  package.json  test_integrated_browser_readiness.js  test_lifecycle_helpers.js  test_panel_readiness.js  test_panel_replay.js  test_request_deadline.js  test_request_journal.js  test_tunnel_desktop_loopback.js  test_tunnel_loopback_promotion.js  test_tunnel_resolution.js  test_tunnel_route_cache.js
vscode-window-routing-plan/: index.html
(+184 files in other folders)
