[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arrayview"
version = "0.2.0"
description = "Lightning-fast ND array viewer in the browser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "matplotlib>=3.9.0",
    "nibabel>=5.3.3",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "qmricolors",
    "uvicorn>=0.41.0",
    "websockets>=14.0",
    "zarr>=2.17",
]

[project.scripts]
arrayview = "arrayview._app:view"

[tool.hatch.build.targets.wheel]
packages = ["src/arrayview"]

[tool.uv.sources]
qmricolors = { git = "https://github.com/oscarvanderheide/qmricolors.git" }
