[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arrayview"
version = "0.2.4"
description = "Fast multi-dimensional array viewer"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
authors = [ { name = "Oscar", email = "oscarvanderheide@example.com" } ]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["npy", "viewer", "mri", "array", "visualization"]
urls = { "Home" = "https://github.com/oscarvanderheide/arrayview", "Source" = "https://github.com/oscarvanderheide/arrayview" }
dependencies = [
    "fastapi>=0.129.0",
    "h5py>=3.0",
    "matplotlib>=3.9.0",
    "nibabel>=5.3.3",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "pywebview>=6.1",
    "PyQt5>=5.15; sys_platform == 'linux'",
    "PyQtWebEngine>=5.15; sys_platform == 'linux'",
    "qtpy>=2.0; sys_platform == 'linux'",
    "qmricolors>=0.1.2",
    "scipy>=1.10",
    "tifffile>=2023.1.1",
    "uvicorn>=0.41.0",
    "websockets>=14.0",
    "zarr>=2.17",
]

[project.scripts]
arrayview = "arrayview._app:arrayview"

[tool.hatch.build.targets.wheel]
packages = ["src/arrayview"]

[tool.uv.sources]
qmricolors = { git = "https://github.com/oscarvanderheide/qmricolors.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "twine>=6.2.0",
]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-playwright>=0.5",
    "pillow>=12.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "browser: marks tests that require a real browser (playwright)",
]
